Update index.html housing to accommodation

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 </section>
         <script type="text/javascript">
-            setTimeout("location.href = 'https://risehigher.education/p-housing';",2000);
+            setTimeout("location.href = 'https://risehigher.education/p-accommodation';",2000);
         </script>
     </body>
 </html>
